# rust_email_server_ver2

./: Cargo.toml  README.md  test_imap.sh  test_imap_telnet.txt
certs/: server.crt  server.key
doc/: IMPLEMENTATION_SUMMARY.md  README.md  TEST.md  phase_7_implementation_summary.md
mail_storage/cur/: 1784548660.4709d4f8.localhost_localdomain  1784548862.8ac335a.localhost_localdomain
mail_storage/new/: 1784547183.a241ab31.localhost_localdomain  1784547302.f729b8a0.localhost_localdomain  1784548104.d7c3f605.localhost_localdomain
mail_storage/tmp/: server.log.2026-07-20
src/: auth.rs  config.rs  connection.rs  email.rs  imap.rs  lib.rs  main.rs  storage.rs  tls.rs
tests/: test_email_storage.sh  test_smtp.sh
