[package]
name = "rust_email_server_ver2"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
rand = "0.8"
hostname = "0.4"
# TLS/SSL support
tokio-rustls = "0.26"
rustls-pemfile = "2.1"
rustls = "0.23"
# Authentication
base64 = "0.22"
